SUBDIRS = src


# Settings and data for making of distribution.

EXTRA_DIST = 


.PHONY: doxygen
doxygen:

	doxygen doxygen.conf


dir-list:

	@echo "top_srcdir            = $(top_srcdir)"
	@echo "srcdir                = $(srcdir)"
	@echo "abs_srcdir            = $(abs_srcdir)"
	@echo "builddir              = $(builddir)"
	@echo "abs_builddir          = $(abs_builddir)"
	@echo "prefix                = $(prefix)"
	@echo "exec_prefix           = $(exec_prefix)"
	@echo "boost_headers_dir     = $(boost_headers_dir)"
	@echo "BOOST_CPPFLAGS        = ${BOOST_CPPFLAGS}"

